k8s/base/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-gateway-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.localhost`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: user-service
          port: 4000
          namespace: default
    # - match: Host(`api.localhost`) && PathPrefix(`/auth`)
    #   kind: Rule
    #   services:
    #     - name: nlp-service
    #       port: 4003
    #       namespace: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-gateway-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.localhost`) && PathPrefix(`/document`)
      kind: Rule
      services:
        - name: user-service
          port: 4000
          namespace: default
    # - match: Host(`api.localhost`) && PathPrefix(`/document`)
    #   kind: Rule
    #   services:
    #     - name: nlp-service
    #       port: 4003
    #       namespace: default
  tls: {} # for local dev
    # certResolver: myresolver   # must match with setup certResolver when install Traefik Helm
